# claude-code-notifier

./: .pre-commit-config.yaml  APPROACHES.md  CLAUDE.md  Makefile  PLAN.md  README.md  common.sh  config.sh  detect-originating-app.sh  get-bundle-id.sh  notify-completion.sh  notify-handler.sh  pyproject.toml  test-window-detection.sh  universal-window.sh
claudedocs/: quality-review-universal-window-detection.md
legacy/: common.sh  install.sh  notify-completion.sh  test-system.sh
src/: __init__.py  app_activator.py  app_detector.py  backup_working_config.py  claude_notifier.py  cleanup_window_hook.sh  debug_windowfilter.py  focus_hook_test_1.sh  focus_hook_test_2.sh  focus_window_hook.sh  hammerspoon_focuser.py  hammerspoon_setup.py  session_end_hook.sh  session_start_hook.sh  stop_hook.sh  test_49.py  test_50.py  test_54.py  test_55.py  test_58.py  test_69.py  test_adjacent_space.py  test_cross_space_window.py  test_github_workaround.py  test_goto_space_debug.py  test_hammerspoon_debug.py  test_hammerspoon_windows.py  test_keyboard_shortcuts.py  test_simple_filter.py  test_space_switching.py  test_space_verification.py  test_window_filter.py  window_context_detector.py  window_detective.py  window_detective_reliable.py  window_test.py
src/pieces/: active_focus_test_1.sh  capture_window_hook.sh  focus_window_hook.sh  notification_test_1.sh
tests/: __init__.py  test_basic.py
